sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: value apresBleu
  while(apresBleu <= avantBlanc){
        ^DutchFlagAlgo:3: error: not found: value avantBlanc
  while(apresBleu <= avantBlanc){
                     ^DutchFlagAlgo:4: error: not found: value apresBleu
    if(getCouleur(apresBleu)==BLEU){
                  ^DutchFlagAlgo:5: error: not found: value apresBleu
      apresBleu+1;
      ^DutchFlagAlgo:7: error: not found: value apresBleu
      echange(apresBleu,avantBlanc);
              ^DutchFlagAlgo:7: error: not found: value avantBlanc
      echange(apresBleu,avantBlanc);
                        ^