sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  while(apresBleu <= avantBlanc){
    if(getCouleur(apresBleu)==BLEU){
      apresBleu+1;
    }else{
      echange(apresBleu,avantBlanc);
    }
  }
}